added simple ddl script in resources and mocked two products
Also added imagepath field to Product

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.initialization-mode=always
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/coffeedb?serverTimezone=UTC
 spring.datasource.username=springuser
 spring.datasource.password=ThePassword
-
