--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.initialization-mode=always
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/coffeedb?serverTimezone=UTC
 spring.datasource.username=springuser
